letting prettier handles the njk formatting

--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -1,5 +1,7 @@
 <!-- BEGIN Google Analytics -->
-<script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-69TD0KNT0F&l=dataLayer&cx=c"></script>
+<script
+  async="async"
+  src="https://www.googletagmanager.com/gtag/js?id=G-69TD0KNT0F&l=dataLayer&cx=c"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
