--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="d-flex">
       <a href="https://ca.gov" class="cagov-logo" target="_blank">
-        <img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov logo">
+        <img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov logo" />
       </a>
       <ul class="footer-links">
         <li>
@@ -13,17 +13,23 @@
           <a href="/privacy-policy.html">Privacy policy</a>
         </li>
         <li>
-          <a href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf" aria-label="Accessibility Certification">Website
-            accessibility certification</a>
+          <a
+            href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf"
+            aria-label="Accessibility Certification">
+            Website accessibility certification
+          </a>
         </li>
         <li>
           <a href="/sitemap.html">Sitemap</a>
         </li>
-        {# <li><a href="/about.html">About</a></li> #}
+        {#
+        <li><a href="/about.html">About</a></li>
+        #}
       </ul>
       <ul class="socialsharer-container">
         <li>
-          <a href="https://github.com/Office-of-Digital-Innovation/California-State-Web-Template">
+          <a
+            href="https://github.com/Office-of-Digital-Innovation/California-State-Web-Template">
             <span class="ca-gov-icon-github" aria-hidden="true"></span>
             <span class="sr-only">GitHub</span>
           </a>
