--- a/src/_includes/mobile-controls.njk
+++ b/src/_includes/mobile-controls.njk
@@ -1,7 +1,7 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
-  <span
-    class="mobile-control-group mobile-header-icons"><!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
+  <span class="mobile-control-group mobile-header-icons">
+    <!-- Add more mobile controls here. These will be on the right side of the mobile page header section -->
   </span>
   <div class="mobile-control-group main-nav-icons">
     <button class="mobile-control toggle-search">
