--- a/src/_includes/site-header.njk
+++ b/src/_includes/site-header.njk
@@ -4,7 +4,10 @@
     <div class="header-organization-banner">
       <a href="/">
         <div class="logo-assets">
-          <img src="/images/template-logo.png" class="logo-img" alt="State Template Logo"/>
+          <img
+            src="/images/template-logo.png"
+            class="logo-img"
+            alt="State Template Logo" />
           <div class="logo-text">
             <span class="logo-state">State of California</span>
             <span class="logo-dept">Web Template</span>
