--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -4,11 +4,18 @@
       <div class="social-media-links">
         <div class="header-cagov-logo">
           <a href="https://ca.gov">
-            <span class="sr-only">CA.gov</span><img src="/images/Ca-Gov-Logo-Gold.svg" class="pos-rel" alt="" aria-hidden="true"/></a>
+            <span class="sr-only">CA.gov</span>
+            <img
+              src="/images/Ca-Gov-Logo-Gold.svg"
+              class="pos-rel"
+              alt=""
+              aria-hidden="true" />
+          </a>
         </div>
         <p class="official-tag">
           <span class="desktop-only">Official website of the</span>
-          State of California</p>
+          State of California
+        </p>
       </div>
       <div class="settings-links">
         <button
@@ -17,7 +24,9 @@
           data-bs-target="#siteSettings"
           aria-expanded="false"
           aria-controls="siteSettings">
-          <span class="ca-gov-icon-gear" aria-hidden="true"></span>Settings</button>
+          <span class="ca-gov-icon-gear" aria-hidden="true"></span>
+          Settings
+        </button>
       </div>
     </div>
   </div>
