--- a/src/scss/cagov/accordion-list.scss
+++ b/src/scss/cagov/accordion-list.scss
@@ -111,7 +111,8 @@
 }
 
 .accordion__panel--transition {
-  transition: max-height 0.2s ease-in-out, padding-top 0.2s ease-in-out, padding-bottom 0.2s ease-in-out;
+  transition: max-height 0.2s ease-in-out, padding-top 0.2s ease-in-out,
+    padding-bottom 0.2s ease-in-out;
 }
 
 .accordion__panel > :last-child {
