--- a/src/scss/cagov/service-profile.scss
+++ b/src/scss/cagov/service-profile.scss
@@ -6,13 +6,13 @@
 
 // TODO: Determine if this is a one off item or if it can be reused in other places
 .service-icon {
-    @include font-size(15);
-    @include text-center();
-    @include rgbacolor (#fff, .8);
-    // color: $rgba;
+  @include font-size(15);
+  @include text-center();
+  @include rgbacolor(#fff, 0.8);
+  // color: $rgba;
 }
 
 .service-icon-thumbnail {
-    @include font-size(5);
-    @include text-center();
+  @include font-size(5);
+  @include text-center();
 }
