--- a/src/scss/cagov/alert-banner.scss
+++ b/src/scss/cagov/alert-banner.scss
@@ -4,99 +4,100 @@
 ----------------------------------------- */
 
 .alert-banner {
-    margin-bottom: 0;
-    padding: .6rem 0 .5rem 0;
-    border-radius: 0;
-    -webkit-column-rule: $text-field-color;
-    -moz-column-rule: $text-field-color;
-    column-rule: $text-field-color;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
+  margin-bottom: 0;
+  padding: 0.6rem 0 0.5rem 0;
+  border-radius: 0;
+  -webkit-column-rule: $text-field-color;
+  -moz-column-rule: $text-field-color;
+  column-rule: $text-field-color;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 
-    .alert-icon {
+  .alert-icon {
     font-size: 1.6rem;
     position: absolute;
     top: 5px;
-    }
+  }
 
-    .alert-icon ~ .alert-text {
-     margin-left: 2.5rem;
-    }
+  .alert-icon ~ .alert-text {
+    margin-left: 2.5rem;
+  }
 
-    img, .alert-img {
-     max-width: 28px;
-     max-height: 28px;
-     margin-right: .5rem;
-     margin-top:-3px;
-    }
+  img,
+  .alert-img {
+    max-width: 28px;
+    max-height: 28px;
+    margin-right: 0.5rem;
+    margin-top: -3px;
+  }
 
-    .close {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        padding: 0 10px;
-        text-shadow: none;
-        float: right;
-        font-size: 1.5rem;
-        font-weight: 700;
-        border: none;
-        background: none;
-    }
+  .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 0 10px;
+    text-shadow: none;
+    float: right;
+    font-size: 1.5rem;
+    font-weight: 700;
+    border: none;
+    background: none;
+  }
 
-    .container {
-        font-size: 1rem;
-        min-height:30px;
-    }
+  .container {
+    font-size: 1rem;
+    min-height: 30px;
+  }
 
-    .container:after {
-        content: " ";
-        display: table;
-        clear: both;
-    }
+  .container:after {
+    content: " ";
+    display: table;
+    clear: both;
+  }
 
-    .alert-text {
-        position: relative;
-    }
+  .alert-text {
+    position: relative;
+  }
 
-    .btn {
-        position: relative;
-        top:-1px;
-    }
+  .btn {
+    position: relative;
+    top: -1px;
+  }
 }
 
 .alert-level {
-    display: inline-block;
-    font-weight: bold;
-    padding: 0 5px;
-    margin: 0 5px;
-    @include font-size(0.87);
+  display: inline-block;
+  font-weight: bold;
+  padding: 0 5px;
+  margin: 0 5px;
+  @include font-size(0.87);
 
-    [class^="ca-gov-icon-"] {
-        margin-right: 3px;
-    }
+  [class^="ca-gov-icon-"] {
+    margin-right: 3px;
+  }
 }
 
 .alert-link {
-    line-height: 1.2em;
-    @include float-right();
-    font-weight: 400;
+  line-height: 1.2em;
+  @include float-right();
+  font-weight: 400;
 }
 
 .alert-severe {
-    background: $brand-highlight;
+  background: $brand-highlight;
 
-    .close {
-        color: $gray-base;
-    }
+  .close {
+    color: $gray-base;
+  }
 
-    .alert-level {
-        color: $gray-base;
-        background: rgba(0, 0, 0, 0.15);
-    }
+  .alert-level {
+    color: $gray-base;
+    background: rgba(0, 0, 0, 0.15);
+  }
 
-    .alert-text {
-        color: $gray-base;
-    }
+  .alert-text {
+    color: $gray-base;
+  }
 }
 
 //
@@ -104,7 +105,7 @@
 // --------------------------------------------------
 
 .global-header.compact {
-    .alert-banner {
-        display: none;
-    }
+  .alert-banner {
+    display: none;
+  }
 }
