--- a/src/scss/cagov/gradient-backgrounds.scss
+++ b/src/scss/cagov/gradient-backgrounds.scss
@@ -6,78 +6,124 @@
 ------------------------------------*/
 .bg-gray-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(180deg, #fff, #dbdbdb); }
+  background-image: linear-gradient(180deg, #fff, #dbdbdb);
+}
 
 .bg-primary-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg,  $color-p2, darken($color-p2, 12%)); }
+  background-image: linear-gradient(225deg, $color-p2, darken($color-p2, 12%));
+}
 
 .bg-highlight-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg,  $color-p1, lighten($color-p1, 20%)); }
+  background-image: linear-gradient(225deg, $color-p1, lighten($color-p1, 20%));
+}
 
 .bg-standout-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $color-p3, lighten($color-p3, 20%)); }
+  background-image: linear-gradient(225deg, $color-p3, lighten($color-p3, 20%));
+}
 
 .bg-secondary-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $color-s3, $color-s1); }
+  background-image: linear-gradient(225deg, $color-s3, $color-s1);
+}
 
- .bg-secondary-light-gradient {
-   background-repeat: repeat-x;
-   background-image: linear-gradient(90deg, $color-s2, $color-s1); }
+.bg-secondary-light-gradient {
+  background-repeat: repeat-x;
+  background-image: linear-gradient(90deg, $color-s2, $color-s1);
+}
 
 .bg-primary-standout-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $color-p2, $color-p3); }
+  background-image: linear-gradient(225deg, $color-p2, $color-p3);
+}
 
 .bg-primary-highlight-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $color-p2, $color-p1); }
+  background-image: linear-gradient(225deg, $color-p2, $color-p1);
+}
 
 .bg-primary-secondary-gradient {
-   background-repeat: repeat-x;
-   background: linear-gradient(180deg, $color-p2, $color-s3); }
+  background-repeat: repeat-x;
+  background: linear-gradient(180deg, $color-p2, $color-s3);
+}
 
 .bg-standout-highlight-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $color-p1, $color-p3); }
+  background-image: linear-gradient(225deg, $color-p1, $color-p3);
+}
 
 .bg-danger-warning-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $brand-warning, $brand-danger); }
+  background-image: linear-gradient(225deg, $brand-warning, $brand-danger);
+}
 
 .bg-info-success-gradient {
   background-repeat: repeat-x;
-  background-image: linear-gradient(225deg, $brand-info, $brand-success); }
-
+  background-image: linear-gradient(225deg, $brand-info, $brand-success);
+}
 
 /* Radial Gradients */
 .bg-grey-radialgradient {
-  background-image: radial-gradient(ellipse farthest-corner at 50% 50%, #dbdbdb 22%, #bbb);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    ellipse farthest-corner at 50% 50%,
+    #dbdbdb 22%,
+    #bbb
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-greylight-radialgradient {
-  background-image: radial-gradient(ellipse farthest-corner at 50% 50%, #fff 25%, #eee);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    ellipse farthest-corner at 50% 50%,
+    #fff 25%,
+    #eee
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-primary-radialgradient {
-  background-image: radial-gradient(circle farthest-side at 50% 50%, $color-p2, darken($color-p2, 12%));
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    circle farthest-side at 50% 50%,
+    $color-p2,
+    darken($color-p2, 12%)
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-highlight-radialgradient {
-  background-image: radial-gradient(circle farthest-side at 50% 50%, lighten($color-p1, 20%), $color-p1);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    circle farthest-side at 50% 50%,
+    lighten($color-p1, 20%),
+    $color-p1
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-standout-radialgradient {
-  background-image: radial-gradient(circle farthest-corner at 75% 95%, lighten($color-p3, 20%), $color-p3);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    circle farthest-corner at 75% 95%,
+    lighten($color-p3, 20%),
+    $color-p3
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-secondary-radialgradient {
-  background-image: radial-gradient(circle farthest-side at 50% 50%, $color-s1, $color-s3);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    circle farthest-side at 50% 50%,
+    $color-s1,
+    $color-s3
+  );
+  background-repeat: no-repeat;
+}
 
 .bg-secondarylight-radialgradient {
-  background-image: radial-gradient(ellipse farthest-corner at 50% 50%, #fff 22%, $color-s1);
-  background-repeat: no-repeat; }
+  background-image: radial-gradient(
+    ellipse farthest-corner at 50% 50%,
+    #fff 22%,
+    $color-s1
+  );
+  background-repeat: no-repeat;
+}
