--- a/src/scss/cagov/grid.scss
+++ b/src/scss/cagov/grid.scss
@@ -9,41 +9,43 @@
 /* .container custom width  */
 
 .container {
- @include container;
+  @include container;
 }
 
 .group {
- @include make-row(); // Self clearing row container same as bootstraps .row
- @media (max-width: $screen-xs-max) {
-  //@include make-row(0);       // Remove negative margins for mobile
- }
+  @include make-row(); // Self clearing row container same as bootstraps .row
+  @media (max-width: $screen-xs-max) {
+    //@include make-row(0);       // Remove negative margins for mobile
+  }
 }
 
 .full-width {
- @include make-xs-column(12);
+  @include make-xs-column(12);
 }
 
 .half {
- //@include make-sm-column(6);     // 50% wide columns same as bootstraps .col-sm-6
- @include make-sm-column(6); // Equivelent to .col-md-6
+  //@include make-sm-column(6);     // 50% wide columns same as bootstraps .col-sm-6
+  @include make-sm-column(6); // Equivelent to .col-md-6
 }
 
 .third {
- @include make-sm-column(4); // Only specifying medium size grid. Small will collapse to single column only
+  @include make-sm-column(
+    4
+  ); // Only specifying medium size grid. Small will collapse to single column only
 }
 
 .two-thirds {
- @include make-sm-column(8);
+  @include make-sm-column(8);
 }
 
 .quarter {
- @include make-xs-column(6); // make 2 column on extra small and small
- @include make-md-column(3); // 4 column on medium and up
+  @include make-xs-column(6); // make 2 column on extra small and small
+  @include make-md-column(3); // 4 column on medium and up
 }
 
 .three-quarters {
- //@include make-sm-column(6);
- @include make-sm-column(9);
+  //@include make-sm-column(6);
+  @include make-sm-column(9);
 }
 
 //
@@ -51,23 +53,23 @@
 // --------------------------------------------------
 
 .offset-quarter {
- @include make-sm-column-offset(3);
+  @include make-sm-column-offset(3);
 }
 
 .offset-third {
- @include make-sm-column-offset(4);
+  @include make-sm-column-offset(4);
 }
 
 .offset-half {
- @include make-sm-column-offset(6);
+  @include make-sm-column-offset(6);
 }
 
 .offset-two-thirds {
- @include make-sm-column-offset(8);
+  @include make-sm-column-offset(8);
 }
 
 .offset-three-quarters {
- @include make-sm-column-offset(9);
+  @include make-sm-column-offset(9);
 }
 
 //
@@ -75,11 +77,11 @@
 // --------------------------------------------------
 
 .main-secondary .group {
- padding: 0 8px 0 8px;
+  padding: 0 8px 0 8px;
 
- .half {
-  padding: 0 7px 0 7px;
- }
+  .half {
+    padding: 0 7px 0 7px;
+  }
 }
 
 //
@@ -87,11 +89,11 @@
 // --------------------------------------------------
 
 .grid-demo {
- margin-bottom: calc($line-height-computed / 2);
+  margin-bottom: calc($line-height-computed / 2);
 
- div {
-  border: 1px solid $gray-light;
- }
+  div {
+    border: 1px solid $gray-light;
+  }
 }
 
 //
@@ -100,9 +102,9 @@
 
 .main-content > .section,
 .two-column .main-content > .section {
- @include container;
+  @include container;
 }
 
 .grid-columns-auto {
- grid-template-columns:auto auto;
+  grid-template-columns: auto auto;
 }
