--- a/src/scss/cagov/profiles.scss
+++ b/src/scss/cagov/profiles.scss
@@ -6,29 +6,30 @@
 // EXECUTIVE PROFILE BANNER
 // --------------------------------------------------
 .executive-profile {
- display: flex;
- flex-direction: row;
- align-items:center;
- padding: 1rem;
- margin: 0;
- font-size: $font-size-base;
- border: none;
- img {
-  max-width: 100px;
-  max-height: 100px;
-  border-radius: 50%;
-  margin-right: 1rem;
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1rem;
+  margin: 0;
+  font-size: $font-size-base;
+  border: none;
+  img {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 50%;
+    margin-right: 1rem;
+    position: relative;
   }
- .executive-profile-body {
-  padding-left: 1rem;
-  border-left: 1px solid $gray-900;
- }
- p, .executive-name {
-  margin-top: 4px;
-  margin-bottom: 4px;
- }
- .executive-name {
-  font-size: $font-size-large;
- }
+  .executive-profile-body {
+    padding-left: 1rem;
+    border-left: 1px solid $gray-900;
+  }
+  p,
+  .executive-name {
+    margin-top: 4px;
+    margin-bottom: 4px;
+  }
+  .executive-name {
+    font-size: $font-size-large;
+  }
 }
