--- a/src/scss/cagov/sections.scss
+++ b/src/scss/cagov/sections.scss
@@ -4,71 +4,74 @@
 ----------------------------------------- */
 
 .section {
-    padding-top: 25px; // beta 5.0 addition
-    padding-bottom: 25px; // beta 5.0 addition
-    background: $white;
-    position: relative; // position and overflow needed for parallax effect
-    overflow: hidden;
+  padding-top: 25px; // beta 5.0 addition
+  padding-bottom: 25px; // beta 5.0 addition
+  background: $white;
+  position: relative; // position and overflow needed for parallax effect
+  overflow: hidden;
 
-    @media (max-width: $screen-xs-max) {
-        padding-top: $line-height-computed;
-        padding-bottom: $line-height-computed;
-    }
-    /* Section extensions */
-    &.collapsed {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
+  @media (max-width: $screen-xs-max) {
+    padding-top: $line-height-computed;
+    padding-bottom: $line-height-computed;
+  }
+  /* Section extensions */
+  &.collapsed {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 
-    .container {
-        > h1, > h2, > h3, > h4 {
-            margin-top: 0; // Remove margin for direct decendents of section
-        }
+  .container {
+    > h1,
+    > h2,
+    > h3,
+    > h4 {
+      margin-top: 0; // Remove margin for direct decendents of section
     }
+  }
 }
 
 // beta 5.0 addition
-.five {		
-	width:115px;			
+.five {
+  width: 115px;
 }
 
-// beta 5.0 addition		
-.four {		
-	width:145px;			
+// beta 5.0 addition
+.four {
+  width: 145px;
 }
 
-// beta 5.0 addition		
-.three {		
-	width:200px;			
-}	
+// beta 5.0 addition
+.three {
+  width: 200px;
+}
 
-// beta 5.0 addition	
-.two {		
-	width:307px;			
-}	
+// beta 5.0 addition
+.two {
+  width: 307px;
+}
 
 // pre tag State Template styles
 pre {
-	word-break: break-all;
-	word-wrap: break-word;
-	background-color: $gray-lightest;
-	border: 1px solid $gray-lighter;
-	padding:$spacer
-	}
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: $gray-lightest;
+  border: 1px solid $gray-lighter;
+  padding: $spacer;
+}
 
 textarea.sourcecode {
-    font-family: var(--bs-font-monospace);
-    width:100%;
-    height:300px;
-    font-size: 0.875em;
-    white-space: pre;
-    }
+  font-family: var(--bs-font-monospace);
+  width: 100%;
+  height: 300px;
+  font-size: 0.875em;
+  white-space: pre;
+}
 
 .parallax-bg {
-    position: relative;
-    background-attachment: fixed;
-    background-position: center 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+  position: relative;
+  background-attachment: fixed;
+  background-position: center 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
