--- a/src/scss/cagov/tables.scss
+++ b/src/scss/cagov/tables.scss
@@ -5,47 +5,51 @@
 /* Adding the explicit classes below so that they are available in Rich Text Editor */
 
 table.table {
-    border-spacing: 0;
+  border-spacing: 0;
 }
 
 table.editor-table-default {
-    @include table();
-    @include table-default();
+  @include table();
+  @include table-default();
 }
 
 table.editor-table-striped {
-    @include table();
-    @include table-striped();
+  @include table();
+  @include table-striped();
 }
 
 /* End Rich Text Editor */
 
 .table {
-    color: $gray-900;
-    // The official table style design for CA.gov
-    &.table-default {
-        border: none;
-        
-        // Table Body
-        > thead, > tbody, > tfoot {
-            > tr {
-                > th, > td {
-                    background:#f3f3f4;
-                    border:2px solid #fff;
-                }
-            }
+  color: $gray-900;
+  // The official table style design for CA.gov
+  &.table-default {
+    border: none;
+
+    // Table Body
+    > thead,
+    > tbody,
+    > tfoot {
+      > tr {
+        > th,
+        > td {
+          background: #f3f3f4;
+          border: 2px solid #fff;
         }
-      
-      // Table Head
-      > thead > tr {
-            > th, > td {
-              background:#d9d9d9;
-              border:2px solid #fff;
-            }
-        }
+      }
     }
+
+    // Table Head
+    > thead > tr {
+      > th,
+      > td {
+        background: #d9d9d9;
+        border: 2px solid #fff;
+      }
+    }
+  }
 }
 
-.table-striped > tbody > tr:nth-of-type(2n+1) > * {
-    color: $gray-900;
+.table-striped > tbody > tr:nth-of-type(2n + 1) > * {
+  color: $gray-900;
 }
