--- a/src/scss/cagov/testimonials.scss
+++ b/src/scss/cagov/testimonials.scss
@@ -4,67 +4,66 @@
 ----------------------------------------- */
 
 .testimonial {
-    padding: $grid-gutter-width;
-    border:none;
+  padding: $grid-gutter-width;
+  border: none;
 }
 
 .testimonial {
-    // Proper spacing between instances of .testimonial
-    margin-top: 15px;
+  // Proper spacing between instances of .testimonial
+  margin-top: 15px;
 
-    &:first-child {
-        margin-top: 0;
-    }
-    
+  &:first-child {
+    margin-top: 0;
+  }
+
+  .thumbnail-img {
+    display: block;
+  }
+
+  .testimonial-body {
+    zoom: 1;
+    overflow: hidden;
+  }
+
+  .thumbnail-right,
+  .testimonial > .float-right {
+    display: table-cell;
+    padding-left: 10px;
+  }
+
+  .thumbnail-left,
+  .testimonial > .float-left {
+    display: table-cell;
+    padding-right: 10px;
+  }
+
+  .thumbnail-left,
+  .img-right,
+  .testimonial-body {
+    display: table-cell;
+    vertical-align: top;
+  }
+
+  .thumbnail-top {
+    @include text-center();
+
     .thumbnail-img {
-        display: block;
+      display: inherit;
+      margin-bottom: $line-height-computed;
     }
-    
-    .testimonial-body {
-        zoom: 1;
-        overflow: hidden;
-    }
-    
-    .thumbnail-right, .testimonial > .float-right {
-        display: table-cell;
-        padding-left: 10px;
-    }
-    
-    .thumbnail-left, .testimonial > .float-left {
-        display: table-cell;
-        padding-right: 10px;
-    }
-    
-    .thumbnail-left, .img-right, .testimonial-body {
-        display: table-cell;
-        vertical-align: top;
-    }
-    
-    .thumbnail-top {
-        @include text-center();
-        
-        .thumbnail-img {
-            display:inherit;
-            margin-bottom:$line-height-computed;
-        }
-    }
-    
-    .thumbnail-middle {
-        vertical-align: middle;
-    }
-    
-    .thumbnail-bottom {
-        vertical-align: bottom;
-    }
-    
-    // Reset margins on headings for tighter default spacing
-    .testimonial-heading {
-        margin-top: 0;
-        margin-bottom: 5px;
-    }
+  }
+
+  .thumbnail-middle {
+    vertical-align: middle;
+  }
+
+  .thumbnail-bottom {
+    vertical-align: bottom;
+  }
+
+  // Reset margins on headings for tighter default spacing
+  .testimonial-heading {
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
 }
-
-
-
-
-
