--- a/src/scss/cagov/youtube.scss
+++ b/src/scss/cagov/youtube.scss
@@ -4,17 +4,19 @@
 ----------------------------------------- */
 
 .video-player {
-	position:relative;
-	padding-bottom:56.25%;
-	padding-top:30px;
-	height:0;
-	overflow:hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
 
-.video-player iframe, .video-player object, .video-player embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+.video-player iframe,
+.video-player object,
+.video-player embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
