--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,26 +8,23 @@
       name="Description"
       content="Version 6 of the State Web Template is California's latest web design standard." />
     <meta name="Keywords" content="California, government" />
-    {% if noindex %}
+    {%- if noindex %}
     <meta name="robots" content="noindex" />
-    {% endif %}
+    {%- endif %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-
     <!-- Primary Meta Tags -->
     <meta name="title" content="California State Web Template" />
     <meta
       name="description"
       content="Version 6 of the State Web Template is California's latest web design standard." />
-
     <!-- Canonical link, improves SEO -->
     <link href="https://template.webstandards.ca.gov{{
-    ("/"+permalink).replace("//","/") if permalink }}" rel="canonical">
-
+    ("/"+permalink).replace("//"," /") if permalink }}" rel="canonical">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://template.webstandards.ca.gov/" />
@@ -38,7 +35,6 @@
     <meta
       property="og:image"
       content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png" />
-
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -51,7 +47,6 @@
     <meta
       property="twitter:image"
       content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png" />
-
     {% include "../head-js-css.njk" %}
   </head>
   <body class="primary">
@@ -59,21 +54,20 @@
       <div id="skip-to-content">
         <a href="#main-content">Skip to Main Content</a>
       </div>
-      {% if alert %} {% include alert %} {% endif %} {% include
-      "../utility-header.njk" %} {% include "../settings.njk" %} {% include
-      "../site-header.njk" %} {% include "../mobile-controls.njk" %}
+      {% if alert -%} {%- include alert -%} {%- endif -%} {%- include
+      "../utility-header.njk" -%} {%- include "../settings.njk" -%} {%- include
+      "../site-header.njk" -%} {%- include "../mobile-controls.njk" -%}
       <div class="navigation-search full-width-nav container">
         <div id="head-search" class="search-container featured-search">
-          {% include "../search.njk" %}
+          {%- include "../search.njk" -%}
         </div>
         <!-- navigation types -->
-        {% if navigation %} {% include navigation %} {% else %} {% include
-        "../navigation.njk" %} {% endif %}
+        {%- if navigation -%} {%- include navigation -%} {%- else -%} {%-
+        include "../navigation.njk" -%} {%- endif -%}
       </div>
     </header>
-
-    {% block content %} {{ content | safe }} {% endblock %} {% include
-    "modules/site-footer.html" %} {% include "../global-footer.njk" %} {%
-    include "../scripts.njk" %}
+    {% block content -%} {{ content | safe }} {%- endblock -%} {%- include
+    "modules/site-footer.html" -%} {%- include "../global-footer.njk" -%} {%-
+    include "../scripts.njk" -%}
   </body>
 </html>
