--- a/src/_includes/layouts/navicons.njk
+++ b/src/_includes/layouts/navicons.njk
@@ -23,7 +23,7 @@
 
         <div
           id="head-search"
-          class='search-container {%- if search === "Featured" %} featured-search {%- endif -%}'>
+          class="search-container {{- ' featured-search' if search === 'Featured' }}">
           {% include "../search.njk" %}
         </div>
       </div>
