--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -41,11 +41,11 @@
 
       <div class="navigation-search full-width-nav container">
         <div id="head-search" class="search-container"></div>
-        {% include "../navigation.njk" %}
+        {% include "../navigation.njk" -%}
       </div>
     </header>
 
-    {% block content %}
+    {%- block content %}
     <div id="main-content" class="main-content">
       <main class="main-primary" id="main">
         <!--Search result section-->
@@ -83,7 +83,7 @@
         </div>
       </main>
     </div>
-    {% endblock %} {% include "../global-footer.njk" %} {% include
+    {% endblock -%} {%- include "../global-footer.njk" -%} {%- include
     "../scripts.njk" %}
 
     <script>
