--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -4,37 +4,27 @@
   aria-label="Main navigation">
   <ul id="nav_list" class="top-level-nav">
     <li class="nav-item">
-      {% if landing === "Template updates" %}
-      <a class="first-level-link active" href="/template-updates.html">
+      <a
+        class="first-level-link {{- ' active' if landing === 'Template updates' }}"
+        href="/template-updates.html">
         Template updates
       </a>
-      {% else %}
-      <a class="first-level-link" href="/template-updates.html">
-        Template updates
-      </a>
-      {% endif %}
     </li>
     <li class="nav-item">
-      {% if landing === "Get started" %}
-      <a class="first-level-link active" href="/get-started.html">
+      <a
+        class="first-level-link {{- ' active' if landing === 'Get started' }}"
+        href="/get-started.html">
         Get started
       </a>
-      {% else %}
-      <a class="first-level-link" href="/get-started.html">Get started</a>
-      {% endif %}
     </li>
     <li class="nav-item">
-      {% if landing === "Structure" %}
-      <a class="first-level-link active" href="/structure.html">Structure</a>
-      {% else %}
-      <a class="first-level-link" href="/structure.html">Structure</a>
-      {% endif %}
+      <a
+        class="first-level-link {{- ' active' if landing === 'Structure' }}"
+        href="/structure.html"
+        >Structure</a
+      >
     </li>
-    {% if landing === "Visual design" %}
-    <li class="nav-item active">{% else %}</li>
-
-    <li class="nav-item">
-      {% endif %}
+    <li class="nav-item {{- ' active' if landing === 'Visual design' }}">
       <a class="first-level-link active" href="/visual-design.html">
         Visual design
       </a>
@@ -59,18 +49,18 @@
       </div>
     </li>
     <li class="nav-item">
-      {% if landing === "Components" %}
-      <a class="first-level-link active" href="/components.html">Components</a>
-      {% else %}
-      <a class="first-level-link" href="/components.html">Components</a>
-      {% endif %}
+      <a
+        class="first-level-link {{- ' active' if landing === 'Components' }}"
+        href="/components.html"
+        >Components</a
+      >
     </li>
     <li class="nav-item">
-      {% if landing === "Patterns" %}
-      <a class="first-level-link active" href="/patterns.html">Patterns</a>
-      {% else %}
-      <a class="first-level-link" href="/patterns.html">Patterns</a>
-      {% endif %}
+      <a
+        class="first-level-link {{- ' active' if landing === 'Patterns' }}"
+        href="/patterns.html"
+        >Patterns</a
+      >
     </li>
   </ul>
 </nav>
